envoydev/xds/envoy-docker-run/envoy-to-grpc-svc.yaml
node:
  id: "envoy-64.58"
  cluster: "test"
runtime:
  symlink_root: /srv/runtime/current
  subdirectory: envoy
  override_subdirectory: envoy_override
watchdog: 
  miss_timeout: 0.2s
  megamiss_timeout: 1s
  kill_timeout: 0s
  multikill_timeout: 0s
flags_path: /etc/envoy/flags/
stats_flush_interval: 5s
stats_config: 
  use_all_default_tags: true
stats_sinks: 
  name: envoy.stat_sinks.hystrix
  config: 
    num_buckets: 10
admin:
  access_log_path: /tmp/admin_access.log
  profile_path: /var/log/envoy/envoy.prof
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 50050
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          generate_request_id: true
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                  grpc: {}
                route:
                  cluster: service_grpc
          http_filters:
          - name: envoy.router
            config: 
              dynamic_stats: false
  clusters:
  - name: service_grpc
    connect_timeout: 0.25s
    type: static
#    lb_policy: ROUND_ROBIN
    lb_policy: LEAST_REQUEST
#    lb_policy: RANDOM
    http2_protocol_options: {}      # enable http2 protocol
    hosts:
      - socket_address:
          address:  10.10.64.58
          port_value: 50051
      - socket_address:
          address:  10.10.64.58
          port_value: 50052
